--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dat.gui": "^0.7.9",
     "gsap": "^3.12.2",
+    "node": "^18.17.1",
     "three": "^0.155.0"
   },
   "devDependencies": {
